Added tables from Chapter 3

--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -134,6 +134,9 @@
 
 % *********** To change the name of Table of Contents / LOF and LOT ************
 
+\usepackage[titles]{tocloft}
+\cftsetindents{figure}{0em}{3.5em}
+\cftsetindents{table}{0em}{3.5em}
 \renewcommand{\contentsname}{Table of Contents}
 \renewcommand{\listfigurename}{List of Figures}
 \renewcommand{\listtablename}{List of Tables}
