--- a/thesis.tex
+++ b/thesis.tex
@@ -40,7 +40,7 @@
 \usepackage{rotating} %A package built on the standard LATEX graphics package to perform all the different sorts of rotation one might like, including complete figures and tables with their captions.
 \usepackage{booktabs} %The package enhances the quality of tables in LATEX, providing extra commands as well as behind-the-scenes optimisation.
 \usepackage[doublespacing]{setspace} %setting the space between the lines
-\usepackage{upquote} %The package switches the typewriter font to Computer Modern Typewriter in OT1 encoding, and modifies the behaviour of verbatim, verbatim*, \verb, and \verb* to print in the “` and ' way”. It does this regardless of other fonts or encodings in use, so long as the package is loaded after the other fonts were.
+%\usepackage{upquote} %The package switches the typewriter font to Computer Modern Typewriter in OT1 encoding, and modifies the behaviour of verbatim, verbatim*, \verb, and \verb* to print in the “` and ' way”. It does this regardless of other fonts or encodings in use, so long as the package is loaded after the other fonts were.
 \usepackage{listings} %The package enables the user to typeset programs (programming code) within LATEX.
 \usepackage{enumerate} %The package adds an optional argument to the enumerate environment which determines the style in which the counter is printed.
 \usepackage{lscape} %Modifies the margins and rotates the page contents but not the page number. Useful, for example, with large multipage tables, as it is compatible with longtable and supertabular.
