--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,21 +1,22 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{Essays on the Economics of Deforestation in Brazil}
+\title{Essays on the Economics and Policies of Deforestation in Brazil}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
 
 %% Subtitle (Optional)
-%\subtitle{}
+%\subtitle{by}
 
 %% The full name of the author
-\author{Vilane Goncalves Sales}
+\author{by \\ Vilane Goncalves Sales}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
 \dept{Department of Economics}
 
+
 %% University and Crest
-\university{University of Birmingham}
+\university{\flushright{University of Birmingham}}
 % Crest minimum should be 30mm.
 \crest{\includegraphics[width=0.3\textwidth]{Figs/crest.png}}
 %% Use this crest, if you are using the college crest
@@ -60,15 +61,18 @@
 \renewcommand{\submissiontext}{A thesis submitted to the University of Birmingham for the degree of}
 
 %% Full title of the Degree
-\degreetitle{Doctor of Philosophy}
+\degreetitle{DOCTOR OF PHILOSOPHY}
 
 %% College affiliation (optional)
-\college{Birmingham Business School \\ College of Social Sciences}
+%\college{Birmingham Business School \\ College of Social Sciences}
 
+\university{Birmingham Business School}
+\universityy{College of Social Sciences}
+\universityyy{University of Birmingham}
 %% Submission date
 % Default is set as {\monthname[\the\month]\space\the\year}
-%\degreedate{September 2014} 
+\degreedate{December 2018} 
 
 %% Meta information
-\subject{Deforestation} \keywords{{Deforestation} {PhD Thesis} {Economics} {University of
-Birmingham}}
+%\subject{Deforestation} \keywords{{Deforestation} {PhD Thesis} {Economics} {University of
+%Birmingham}}
