--- a/thesis.tex
+++ b/thesis.tex
@@ -193,10 +193,10 @@
 
 \maketitle
 
+\include{Abstract/abstract}
 \include{Dedication/dedication}
 \include{Declaration/declaration}
 \include{Acknowledgement/acknowledgement}
-\include{Abstract/abstract}
 
 % *********************** Adding TOC and List of Figures ***********************
 
@@ -209,11 +209,12 @@
 % \printnomenclature[space] space can be set as 2em between symbol and description
 %\printnomenclature[3em]
 
-\printnomenclature
+%\printnomenclature
 
 % ******************************** Main Matter *********************************
 \mainmatter
 
+\include{Introduction/Introduction}
 \include{Chapter1/chapter1}
 \include{Chapter2/chapter2}
 \include{Chapter3/chapter3}
@@ -229,7 +230,7 @@
 %\backmatter
 
 % ********************************** Bibliography ******************************
-\begin{spacing}{0.9}
+\begin{spacing}{1.2}
 
 % To use the conventional natbib style referencing
 % Bibliography style previews: http://nodonn.tipido.net/bibstyle.php
