--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
 % ******************************* PhD Thesis Template **************************
 % Please have a look at the README.md file for info on how to use the template
 
-\documentclass[a4paper,12pt,times,authoryear,print,twoside,index]{PhDThesisPSnPDF}
+\documentclass[a4paper,12pt,times,authoryear,print,oneside,index]{PhDThesisPSnPDF}
 
 
 
@@ -156,7 +156,7 @@
 % and Section Name in Header on Odd Side (Right Odd). Page numbering in footer
 
 % Uncomment to change page style
-\pagestyle{PageStyleI}
+%\pagestyle{PageStyleI}
 
 % ********************************** Preamble **********************************
 % Preamble: Contains packages and user-defined commands and settings
