Correcting Tables in Chapter 1 and 2 and Finalising Intro.

--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -77,3 +77,8 @@ We find that for the Legal Maranho region most of the deforestation happened dur
 
 %Chapter3
 
+In our final chapter, we investigate further the findings from  Chapter 2. Apparently, the environmental policy faded in areas of biome transition that coincided with the delimitation of the surveillance policy. We use event history analysis to confirm these findings by considering the heterogeneity within the region because not all sites within ecological tension zone have the same risk of deforestation. The uniqueness of the area proposes a natural experiment of deforestation in the Legal Amazon Maranhão and Cerrado Maranhão since the former has been subject to fundamentally different environmental policies compared to the latter. In our analysis we estimate the probability of a transition between intact forest to disturbed forest, given the risk factors, and conditional on the time elapsed until the occurrence of the transition. We were seeking to answer some questions such as if the probability of deforestation was higher in the region not controlled by a specific environmental policy, what factors may be influencing the risk of the two regions to be deforested, and if changing behaviour undermined the effect of the policy.
+
+Our results show that forests inside the specific surveillance policy area had a lower probability of survival comparing to the area not covered by the environmental policy. Forested pixels close to protected areas,  which include conservation units and indigenous land, had a higher chance of being cleared comparing to forested pixels far from these special zones. The presence of clouds was an active barrier to the legal compliance and, since the studied area has no systematic differences, we can agree on the lack of effectiveness due to cloud barrier.
+
+From this economic and policy analyses of deforestation in Brazil it is possible to derive key policy implications about the potential ways to curb deforestation in the country. We've seen that institutional factors are of great instrument to protect or refrain deforestation in the Legal Amazon however the framework needs to be tightened up in terms of enforcement. We also could follow the past trend of deforestation in two areas of great importance for the Brazilian biome, Amazon and Cerrado. With the trends we could deduce that the deforestation process was shifted to rainy periods and non surveilled areas. The policy implication must to the highest degree be expanded to these ecotonic/transition forests along the Amazon Forest. In addition, monitoring system that could observe deforestation regardless cloud and atmospheric barriers should be considered for the application of the environmental policy such as the satellite Sentinel-2. Finally, since the studied areas are severely influenced by anthropic actions, one step further it would be extending the environmental policy to the Cerrado region. 
