--- a/Dedication/dedication.tex
+++ b/Dedication/dedication.tex
@@ -1,8 +1,10 @@
-% ******************************* Thesis Dedidcation ********************************
+% ******************************* Thesis Dedication ********************************
 
 \begin{dedication} 
 
-I would like to dedicate this thesis to my loving parents \dots
+\begin{flushright}  
+To my loving husband. \\ Arthur, this is for us. 
+\end{flushright}  
 
 \end{dedication}
 
